# flax-sentence-embeddings

./: .gitignore  pyproject.toml
notebooks/: codesearch_eval.ipynb  codesearch_eval_torch.ipynb  codesearch_train.ipynb
