[tool.poetry]
name = "flax-sentence-embeddings"
version = "0.1.0"
description = "Flax Sentence Embeddings on 1B+ training pairs"
authors = ["Nils Reimer"]

packages = [
    { include = "datasets" }
]

[tool.poetry.dependencies]
python = "^3.9.2"
numpy = "*"
flax = "*"
jax = "*"
torch = "1.9.0"
pytest = "^3.4"
internetarchive = "*"
tokenizers = "0.10.3"
transformers = "4.8.2"
sentence_transformers = "*" 
py7zr = "*"
tqdm = "*"
loguru = "*"
datasets = "^1.8.0"
wandb = "*"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "*"
pylama = "*"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
